# bench

./: bench.sh
cpp_grpc_st_eventuals_bench/: .bazelrc  .dockerignore  BUILD.bazel  Dockerfile  WORKSPACE.bazel  client.cc  helloworld_eventuals_server.cc  qq
results/231606T163125/: cpp_grpc_st_eventuals_bench.report  cpp_grpc_st_eventuals_bench.stats
results/231606T163154/: cpp_grpc_st_eventuals_bench.report  cpp_grpc_st_eventuals_bench.stats
results/231606T163304/: cpp_grpc_st_eventuals_bench.report  cpp_grpc_st_eventuals_bench.stats
results/231606T163414/: cpp_grpc_st_bench.report  cpp_grpc_st_bench.stats
results/231606T163502/: cpp_grpc_st_eventuals_bench.report  cpp_grpc_st_eventuals_bench.stats
results/231606T163641/: cpp_grpc_st_eventuals_bench.report  cpp_grpc_st_eventuals_bench.stats
results/231606T163732/: cpp_grpc_st_eventuals_bench.report  cpp_grpc_st_eventuals_bench.stats
results/231606T163814/: cpp_grpc_st_eventuals_bench.report  cpp_grpc_st_eventuals_bench.stats
